// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarGroup Component Test > Avatar Group with max length 3 and size xs showed correctly 1`] = `
<div
  className="avatar-group"
  data-testid="avatar-group"
>
  <div
    className="avatar xs"
    data-testid="avatar-image"
  >
    <img
      alt="Budi"
      src="/@fs/assets/avatar1.webp"
    />
  </div>
  <div
    className="avatar placeholder xs"
    data-testid="avatar-placeholder"
  >
    <span>
      BM
    </span>
  </div>
  <div
    className="avatar xs"
    data-testid="avatar-image"
  >
    <img
      alt="Meli Sulis"
      src="/@fs/assets/avatar3.webp"
    />
  </div>
  <div
    className="avatar more xs"
  >
    <span>
      +5
    </span>
  </div>
</div>
`;

exports[`AvatarGroup Component Test > Avatar Group with max length 4 and size sm showed correctly 1`] = `
<div
  className="avatar-group"
  data-testid="avatar-group"
>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Budi"
      src="/@fs/assets/avatar1.webp"
    />
  </div>
  <div
    className="avatar placeholder sm"
    data-testid="avatar-placeholder"
  >
    <span>
      BM
    </span>
  </div>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Meli Sulis"
      src="/@fs/assets/avatar3.webp"
    />
  </div>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Meri"
      src="/@fs/assets/avatar1.webp"
    />
  </div>
  <div
    className="avatar more sm"
  >
    <span>
      +4
    </span>
  </div>
</div>
`;

exports[`AvatarGroup Component Test > Avatar Group with maxLength above the number of user list showed correctly 1`] = `
<div
  className="avatar-group"
  data-testid="avatar-group"
>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Budi"
      src="/@fs/assets/avatar1.webp"
    />
  </div>
  <div
    className="avatar placeholder sm"
    data-testid="avatar-placeholder"
  >
    <span>
      BM
    </span>
  </div>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Meli Sulis"
      src="/@fs/assets/avatar3.webp"
    />
  </div>
</div>
`;

exports[`AvatarGroup Component Test > Avatar Group with maxLength same with number of user list showed correctly 1`] = `
<div
  className="avatar-group"
  data-testid="avatar-group"
>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Budi"
      src="/@fs/assets/avatar1.webp"
    />
  </div>
  <div
    className="avatar placeholder sm"
    data-testid="avatar-placeholder"
  >
    <span>
      BM
    </span>
  </div>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Meli Sulis"
      src="/@fs/assets/avatar3.webp"
    />
  </div>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Meri"
      src="/@fs/assets/avatar1.webp"
    />
  </div>
  <div
    className="avatar sm"
    data-testid="avatar-image"
  >
    <img
      alt="Adi Mulya"
      src="/@fs/assets/avatar2.webp"
    />
  </div>
</div>
`;
